<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.detail.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            app:contentScrim="?colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/img_poster"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                tools:srcCompat="@tools:sample/avatars"
                android:contentDescription="@string/poster_movie" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                tools:src="@drawable/image_front_shadow"
                android:contentDescription="@string/poster_movie" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@null"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/abc_ic_ab_back_material" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:indeterminateTint="@color/white" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            tools:visibility="visible">

            <TextView
                android:id="@+id/tv_genre"
                style="@style/TextViewSubTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/dummy_genre" />

            <TextView
                android:id="@+id/tv_option_information"
                style="@style/TextViewSubTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@+id/tv_genre"
                app:layout_constraintTop_toBottomOf="@+id/tv_genre"
                tools:text="@string/dummy_release_date" />

            <TextView
                android:id="@+id/tv_duration"
                style="@style/TextViewSubTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@+id/tv_option_information"
                app:layout_constraintTop_toBottomOf="@+id/tv_option_information"
                tools:text="@string/dummy_duration" />

            <TextView
                android:id="@+id/tv_overview"
                style="@style/TextViewSubTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@+id/tv_duration"
                app:layout_constraintTop_toBottomOf="@+id/tv_duration"
                tools:text="@string/dummy_overview" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackground"
                app:cardBackgroundColor="@color/colorSecondary"
                app:cardCornerRadius="7dp"
                app:layout_constraintStart_toStartOf="@+id/tv_overview"
                app:layout_constraintTop_toBottomOf="@+id/tv_overview">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/share"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/tv_option_information"
                    app:layout_constraintTop_toBottomOf="@+id/tv_option_information" />

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/tap_to_favorite"
        android:src="@drawable/ic_baseline_favorite_border"
        app:backgroundTint="@color/colorSecondary"
        app:layout_anchorGravity="end|bottom"
        app:layout_anchor="@id/appBarLayout"
        app:tint="@color/white" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>